--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,30 @@
     <meta name="author" content="Ongair">
     <meta name="description" content="Storify your WhatsApp conversation">
     <meta name="keywords" content="WhatsApp,Storify">
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <link href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css" rel="stylesheet" type='text/css'>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css' />
+    <link href="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css" rel="stylesheet" type='text/css' />
+    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+    
   </head>
   
-  <body>
+  <body ng-app="StoryApp" ng-cloak>
 
-    <form action="/stories" method="POST" enctype='multipart/form-data'>  
-      <input id="file" type="file" />
-      <input type="submit" value="Upload" />
+    <form action="/stories" method="POST" enctype='multipart/form-data' class="upload">  
+      <label for="file">Select the WhatsApp export zip file to upload</label>
+      <input id="file" type="file" required />
+      <md-button class="md-raised md-primary">Upload</md-button>
     </form>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-animate.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-aria.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-messages.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+    <script type="text/javascript" src="/assets/js/app.js"></script>
+
+    <script type="text/javascript">
+      var StoryApp = angular.module('StoryApp', ['ngMaterial']);
+    </script>
   </body>
 </html>
