--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
     
   </head>
   
-  <body ng-app="StoryApp" ng-cloak>
+  <body>
 
-    <form action="/stories" method="POST" enctype='multipart/form-data' class="upload">  
+    <form ng-app="StoryApp" ng-controller="StoryController as story" action="/stories" method="POST" enctype='multipart/form-data' class="upload">  
       <label for="file">Select the WhatsApp export zip file to upload</label>
-      <input id="file" type="file" required />
-      <md-button class="md-raised md-primary">Upload</md-button>
+      <input id="file" type="file" required ng-model="story.file" accept=".zip" />
+      <md-button class="md-raised md-primary" ng-click="story.upload()">Upload</md-button>
     </form>
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js"></script>
@@ -31,6 +31,33 @@
 
     <script type="text/javascript">
       var StoryApp = angular.module('StoryApp', ['ngMaterial']);
+
+      StoryApp.controller('StoryController', function() {
+
+        this.file = null;
+        var self = this;
+        this.upload = function upload() {
+          console.log('Clicked upload');
+          // debugger;
+        }
+      });
+
+      // StoryApp.directive('file')
+      StoryApp.service('fileUpload', ['$http', function ($http) {
+        this.uploadFileToUrl = function(file, uploadUrl){
+          var fd = new FormData();
+          fd.append('file', file);
+            
+          $http.post(uploadUrl, fd, {
+            transformRequest: angular.identity,
+            headers: {'Content-Type': 'application/json'}
+           })
+           .success(function(){
+           })      
+           .error(function(){
+            });
+          }
+      }]);
     </script>
   </body>
 </html>
