Set up to use jsx files

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <div id="main">
-      <div class="section no-pad-bot" id="index-banner">
+      <!-- <div class="section no-pad-bot" id="index-banner">
         <div class="container">
           <br><br>
           <h1 class="header center orange-text">Working Title</h1>
@@ -43,7 +43,7 @@
           </div>
           <br><br>
         </div>
-      </div>
+      </div> -->
     </div>
     
 <!--     <form action="/stories" method="POST" enctype='multipart/form-data' class="upload">  
@@ -63,9 +63,12 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>    
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-router/2.4.1/ReactRouter.min.js"></script>    
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>    
-    <script type="text/javascript" src="/assets/js/app.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>        
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script type="text/babel" src="/javascripts/main.jsx"></script>
+    <script type="text/javascript" src="/assets/js/app.jsx"></script>
    
   </body>
 </html>
