Redirecting to story

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <footer class="page-footer orange">
       <div class="footer-copyright">
         <div class="container">
-        Made by <a class="orange-text text-lighten-3" href="//ongair.im" target="_blank">Ongair</a>
+        Made with &hearts; by <a class="orange-text text-lighten-3" href="//ongair.im" target="_blank">Ongair</a>
         </div>
       </div>
     </footer>
