Added loading text

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
   
   <body>    
     <div id="main" className="container">
+      <div class="loader">
+        <h5>Loading the WhatsApp storify goodness...</h5>
+      </div>
     </div>
     
     <footer class="page-footer orange">
